--- a/.env
+++ b/.env
@@ -31,3 +31,10 @@ APP_SECRET=ab33292f26a14656b6a727e64ae74aa7
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 DATABASE_URL="mysql://root:@127.0.0.1:3306/Projetbook"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=gmail://hamatalbi9921@gmail.com:123456789hama@localhost
+###< symfony/swiftmailer-bundle ###
